# zpg-project

./: .gitignore  CMakeLists.txt
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
imgui/: CMakeLists.txt
src/: application.cpp  application.h  asset.cpp  asset.h  assetmanager.cpp  assetmanager.h  assetprovider.cpp  assetprovider.h  camera.h  drawableobject.cpp  drawableobject.h  main.cpp  material.cpp  material.h  materials.cpp  materials.h  materialsystem.cpp  materialsystem.h  mesh.cpp  mesh.h  model.cpp  model.h  renderer.cpp  renderer.h  scene.cpp  scene.h  shader.cpp  shader.h  shaderprogram.cpp  shaderprogram.h  transform.cpp  transform.h  vertex.h
